influxdb.yaml
---
# Source: influxdb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "influxdb"
  labels:
    app: "influxdb"
    chart: "influxdb-3.0.1"
    release: "influxdb"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 8086
    targetPort: 8086
  - name: rpc
    port: 8088
    targetPort: 8088
  selector:
    app: influxdb
---
# Source: influxdb/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "influxdb"
  labels:
    app: "influxdb"
    chart: "influxdb-3.0.1"
    release: "influxdb"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: "influxdb"
  template:
    metadata:
      labels:
        app: influxdb
        release: "influxdb"
    spec:
      containers:
      - name: influxdb
        image: "influxdb:1.7.6-alpine"
        imagePullPolicy: "IfNotPresent"
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 512Mi
        ports:
        - name: api
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /ping
            port: api
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: api
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: influxdb-data
          mountPath: /var/lib/influxdb
        - name: config
          mountPath: /etc/influxdb
      volumes:
      - name: config
        configMap:
          name: influxdb
  volumeClaimTemplates:
    - metadata:
        name: influxdb-data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
